Fix scrollbar

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -107,7 +107,6 @@ main {
         .stats-container{
             display: flex;
             flex-direction: row;
-            overflow: scroll;
             justify-content: center;
             width: 100%;
             gap: 10px;
